--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
@@ -52,6 +52,7 @@
                         <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nome Prodotto', 'a.title') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Descrizione', 'a.shortDescription') }}</th>
                         <th>Stato</th>
+                        <th>Home</th>
                         <th>Azioni</th>
                     </tr>
                 </thead>
@@ -72,6 +73,7 @@
                         <td>{{ product.title }}</td>
                         <td>{{ product.shortDescription }}</td>
                         <td>{% if product.pub == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
+                        <td>{% if product.featured == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
                         <td>
                             <a href="{{ path('update_product_info', {'id' : product.idTblCatalogueProduct}) }}" title="Modifica" class="btn btn-warning btn-circle"><i class="fa fa-lg fa-edit"></i></a>
                             <a href="{{ path('delete_product', {'id' : product.idTblCatalogueProduct}) }}" title="Elimina" class="btn btn-danger btn-circle"><i class="fa fa-lg fa-times"></i></a>
