--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -88,6 +88,11 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
+                            <div id="lingua">
+                                {{ render(controller('QwebCMSCatalogoBundle:Language:index', {'request': app.request})) }}
+                            </div>
+                        </li>
+                        <li>
                             <a href="{{ path('logout') }}">
                                 <i class="fa fa-sign-out"></i> Log out
                             </a>
