Allineato controller Categorie a gestione lingua, inserito select su layout per scelta lingua

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -89,7 +89,7 @@
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
                             <div id="lingua">
-                                {{ render(controller('QwebCMSCatalogoBundle:Language:index', {'request': app.request})) }}
+                                {{ render(controller('QwebCMSCatalogoBundle:Language:index')) }}
                             </div>
                         </li>
                         <li>
