--- a/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Welcome/showallcategoryproduct.html.twig
@@ -14,11 +14,11 @@
             <li class="active">
                 <a href="{{ path('products') }}">Prodotti <span class="fa arrow"></span></a>
                 <ul class="nav nav-third-level collapse in">
-                    {% for category in categories %}
-                        {% if id ==  category.idTblCatalogueCategory %}
-                            <li class="active"><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                    {% for categ in categories %}
+                        {% if id ==  categ.idTblCatalogueCategory %}
+                            <li class="active"><a href="{{ path('show_category', {id : categ.idTblCatalogueCategory}) }}">{{ categ.title }}</a></li>
                         {% else %}
-                            <li><a href="{{ path('show_category', {id : category.idTblCatalogueCategory}) }}">{{ category.title }}</a></li>
+                            <li><a href="{{ path('show_category', {id : categ.idTblCatalogueCategory}) }}">{{ categ.title }}</a></li>
                         {% endif %}
                     {% endfor %}
                 </ul>
@@ -32,7 +32,7 @@
 {% block content %}
 <div class="ibox float-e-margins">
     <div class="ibox-title">
-        <h5>Categoria: <span class="text-success">{{ category.title }}</span></h5>
+        <h5>Categoria: <span class="text-success">{{ category[0].title }}</span></h5>
         <div class="ibox-tools">
             <a class="btn btn-primary btn-xs" href="{{ path('create_category') }}"><i class="fa fa-lg fa-plus"></i> Categoria</a>
             <a class="btn btn-primary btn-xs" href="{{ path('create_product') }}"><i class="fa fa-lg fa-plus"></i> Prodotto</a>
@@ -76,8 +76,8 @@
                         <td>{% if product.featured == 1 %}<i class="text-info fa fa-lg fa-check"></i>{% else %}<i class="text-danger fa fa-lg fa-times"></i>{% endif %}</td>
                         <td>
                             <div class="btn-group">
-                                <a href="{{ path('update_product_info', {'id' : product.idTblCatalogueProduct}) }}" title="Modifica" class="btn btn-warning">Modifica</a>
-                                <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a href="{{ path('update_product_info', {'id' : product.idTblCatalogueProduct}) }}" title="Modifica" class="btn btn-xs btn-warning">Modifica</a>
+                                <button type="button" class="btn btn-warning btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span class="caret"></span>
                                     <span class="sr-only">Apri menù a discesa</span>
                                 </button>
