--- a/src/QwebCMS/CatalogoBundle/Resources/views/Language/select_language.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Language/select_language.html.twig
@@ -1,7 +1,6 @@
-<form action="{{ path('change_language') }}" method="post" >
-    <select name="lng">
+<form action="{{ path('change_language') }}" method="post" id="lngForm">
+    <select id="lng" name="lng">
         <option {% if id_lingua == '4' %} selected="selected" {% endif %} value="4">IT</option>
         <option {% if id_lingua == '1' %} selected="selected" {% endif %} value="1">EN</option>
     </select>
-    <button type="submit">Change</button>
 </form>
