Inserito campo per posti letto in creazione prodotto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/newproductinfo.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/newproductinfo.html.twig
@@ -154,14 +154,11 @@
                                 </div>
 
                                 <div class="col-lg-4">
-                                    {#<div class="form-group">
-                                        {{ form_label(form.planimetria, 'Planimetria'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
-                                        {{ form_errors(form.planimetria) }}
-                                        {{ form_widget(form.planimetria, {'attr': {'class': 'form-control'}}) }}
-                                        <div id="drop-planimetria" class="dropzone col-lg-12" action="#">
-                                            <div class="dropzone-previews"></div>
-                                        </div>
-                                    </div>#}
+                                    <div class="form-group">
+                                        {{ form_label(form.postiLetto, 'Posti Letto'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                        {{ form_errors(form.postiLetto) }}
+                                        {{ form_widget(form.postiLetto, {'attr': {'class': 'form-control'}}) }}
+                                    </div>
                                 </div>
 
                                 <div class="col-lg-4">
@@ -171,12 +168,25 @@
                                         {{ form_widget(form.cod, {'attr': {'class': 'form-control'}}) }}
                                     </div>
                                 </div>
+
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         {{ form_label(form.position, 'Posizione'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                         {{ form_errors(form.position) }}
                                         {{ form_widget(form.position, {'attr': {'class': 'form-control'}}) }}
                                     </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    {#
+                                    <div class="form-group">
+                                        {{ form_label(form.planimetria, 'Planimetria'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                        {{ form_errors(form.planimetria) }}
+                                        {{ form_widget(form.planimetria, {'attr': {'class': 'form-control'}}) }}
+                                        <div id="drop-planimetria" class="dropzone col-lg-12" action="#">
+                                            <div class="dropzone-previews"></div>
+                                        </div>
+                                    </div>
+                                    #}
                                 </div>
 
                             </div>
