--- a/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/update.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Featurevalue/update.html.twig
@@ -71,6 +71,12 @@
                                 {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                {{ form_errors(form.imageFile) }}
+                                {{ form_widget(form.imageFile, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
                         <div class="clearfix"></div>
                         <div class="col-md-5">
                             <div class="form-group">
