Creato nuovo campo per form custom con mappa per geolocalizzazione punto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
@@ -102,11 +102,13 @@
         </div>
         {{ form_end(form) }}
     </div>
+</div>
 
 
 {% endblock %}
 
 
 {% block javascripts %}
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbwhG81HUpTvn5nTlO0eCzC4KVnSMGW5c"></script>
 
 {% endblock %}
