Inserito campo mappa su nuovo/modifica prodotto

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Form/fields.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Form/fields.html.twig
@@ -19,11 +19,18 @@
 
 {% block gps_coordinate_widget %}
     {% spaceless %}
-        {{ block('form_widget_simple') }}
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-map" id="open-modal-map">
-            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-        </button>
+        <div class="clearfix">
+            <div class="col-md-10">
+                {{ block('form_widget_simple') }}
+            </div>
+
+            <!-- Button trigger modal -->
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-map" id="open-modal-map">
+                    <span class="fa fa-lg fa-map-marker" aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
         <!-- Modal -->
         <div class="modal fade modal-map" id="modal-map" tabindex="-1" role="dialog" aria-labelledby="modal-map" aria-hidden="true">
             <div class="modal-dialog">
@@ -46,6 +53,7 @@
         </div>
 
         {% block javascripts %}
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbwhG81HUpTvn5nTlO0eCzC4KVnSMGW5c"></script>
             <script>
                 var llamap = {
                     marker: {},
