Modificato rendering dei form per le feature in modo da generare HTML compatibile con Bootstrap 3

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductfeatures.html.twig
@@ -35,7 +35,7 @@
 {% endblock %}
 
 {% block content %}
-
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
 <div class="wrapper wrapper-content animated fadeInRight ecommerce">
     {{ form_start(form) }}
 
