--- a/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Category/new.html.twig
@@ -43,7 +43,7 @@
 
 {% block content %}
 
-
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
 <div class="row">
 
     <div class="col-lg-12">
@@ -58,12 +58,12 @@
                         <div class="panel-body">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    {{ form_label(form.title, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_label(form.title, 'Nome'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.title) }}
                                     {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
                                 </div>
                                 <div class="form-group">
-                                    {{ form_label(form.description, label|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                    {{ form_label(form.description, 'Descrizione'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                     {{ form_errors(form.description) }}
                                     {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
                                 </div>
