--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductfeatures.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductfeatures.html.twig
@@ -8,7 +8,7 @@
         <div class="col-lg-12">
             <h2>Modifica "{{ product.title }}"</h2>
             <h4>Categoria:</h4>
-            {% for category  in product.categories %}
+            {% for category in categories %}
                 <span>{{ category.title }}</span>
             {% endfor %}
         </div>
