Tolto posti letto e inserito Valore Catastale

--- a/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductinfo.html.twig
+++ b/src/QwebCMS/CatalogoBundle/Resources/views/Product/updateproductinfo.html.twig
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
-                                        {{ form_label(form.valoreCatastale, 'Posti Letto'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
+                                        {{ form_label(form.valoreCatastale, 'Valore Catastale'|default(null) ,{'label_attr': {'class': 'control-label'}}) }}
                                         {{ form_errors(form.valoreCatastale) }}
                                         {{ form_widget(form.valoreCatastale, {'attr': {'class': 'form-control'}}) }}
                                     </div>
